@@ -5,8 +5,9 @@ from Products.CMFCore.utils import getToolByName
 from collective.googlenews.config import PROJECTNAME
 
 
-def uninstall(portal):
-    profile = 'profile-%s:uninstall' % PROJECTNAME
-    setup_tool = getToolByName(portal, 'portal_setup')
-    setup_tool.runAllImportStepsFromProfile(profile)
-    return "Ran all uninstall steps."
+def uninstall(portal, reinstall=False):
+    if not reinstall:
+        profile = 'profile-%s:uninstall' % PROJECTNAME
+        setup_tool = getToolByName(portal, 'portal_setup')
+        setup_tool.runAllImportStepsFromProfile(profile)
+        return "Ran all uninstall steps."
