@@ -4,6 +4,8 @@ Changelog
 1.0rc2 (unreleased)
 -------------------
 
+- Do not run uninstall profile on reinstall. [hvelarde]
+
 - Control panel widget was replaced; we use now Choice instead of ASCIILine
   (fixes `#3`_). [hvelarde]
 
